2004-10-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* c-lex.c (interpret_float): Give a pedwarn rather than a warning
	for an out-of-range floating point constant.
	* builtins.c (fold_builtin_inf): Give a pedwarn rather than a
	warning if the target format does not support infinities.

2004-10-08  Kazu Hirata  <kazu@cs.umass.edu>

	* emit-rtl.c (last_label_num, base_label_num): Remove.
	(max_label_num): Always return label_num.
	(set_new_last_label_num, restore_emit_status): Remove.
	(init_emit): Don't initialize last_label_num.
	* function.c (pop_function_context_from): Don't call
	restore_emit_status.
	* function.h: Remove the prototype for restore_emit_status.
	* rtl.h: Remove the prototype for set_new_last_label_num.

2004-10-08  Kazu Hirata  <kazu@cs.umass.edu>

	* stmt.c (expand_decl_init): Remove.
	* tree.h: Remove the corresponding prototype.

2004-10-08  Kazu Hirata  <kazu@cs.umass.edu>

	* integrate.c (try_constants, subst_constants, mark_stores):
	Remove.
	* integrate.h: Remove the prototype for try_constants.

2004-10-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	* c-typeck.c (enum impl_conv): Add ic_argpass_nonproto.
	(convert_for_assignment): Handle ic_argpass_nonproto.  Add
	comments about its relevance to errors.
	(c_convert_parm_for_inlining): Use ic_argpass_nonproto.

2004-10-08  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c/16999
	* c-ppoutput.c (cb_ident): Don't quote string as it is already
	quoted.

2004-10-08  Diego Novillo  <dnovillo@redhat.com>

	* tree-ssa-pre.c (init_pre): Use size of ARRAY_REF to allocate
	reference_node_pool.

2004-10-08  Kazu Hirata  <kazu@cs.umass.edu>

	* tree-cfg.c: Fix a comment typo.

2004-10-08  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.c (s390_register_info): Don't save fprs for 
	-msoft-float.
	(s390_conditional_register_usage): Make fprs 'fixed' for -msoft-float.

2004-10-08  Ulrich Weigand  <uweigand@de.ibm.com>

	* config/s390/s390.h (TARGET_DEFAULT_BACKCHAIN): New define.